--- a/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
@@ -1,1 +1,14 @@
 <h1>Bem Vindo, {{name}}</h1>
+<mat-card class="wrapper">
+    <mat-card-header>
+        <mat-card-title>
+            Lista de Tarefas
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <mat-form-field class="form-field">
+            <mat-label>Tarefas : </mat-label>
+            <input type="text" matInput placeholder="Digite sua tarefa">
+        </mat-form-field>
+    </mat-card-content>
+</mat-card>
