--- a/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
@@ -10,5 +10,8 @@
             <mat-label>Tarefas : </mat-label>
             <input type="text" #todo matInput placeholder="Digite sua tarefa" (keyup.enter)="addTodo(todo.value); todo.value=''">
         </mat-form-field>
+        <mat-list role="list">
+            <app-todo-item></app-todo-item>
+        </mat-list>
     </mat-card-content>
 </mat-card>
