Desenvolvendo o componente todo-item - Parte 2

--- a/workspace/todo-project/src/app/pages/todo/todo-item/todo-item.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-item/todo-item.component.html
@@ -3,5 +3,5 @@
     <button mat-icon-button aria label="Marca como concluido">
         <mat-icon>done</mat-icon>
     </button>
-    <button mat-button color="warn">Excluir</button>
+    <button mat-raised-button color="warn">Excluir</button>
 </mat-list-item>
