--- a/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
@@ -11,7 +11,10 @@
             <input type="text" #todo matInput placeholder="Digite sua tarefa" (keyup.enter)="addTodo(todo.value); todo.value=''">
         </mat-form-field>
         <mat-list role="list">
-            <app-todo-item></app-todo-item>
+            <div *ngFor="let todo of todos;">
+                <app-todo-item [todo]="todo"></app-todo-item>
+            </div>
         </mat-list>
     </mat-card-content>
 </mat-card>
+                
