--- a/workspace/todo-project/src/app/pages/todo/todo-item/todo-item.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-item/todo-item.component.html
@@ -1,7 +1,9 @@
 <mat-list-item role="listitem">
-    Item 1 
-    <button mat-icon-button aria label="Marca como concluido">
+    <p [ngStyle]="{textDecoration: done ? 'line-through' : 'none'}">
+        {{todo.title}}
+    </p>
+    <button mat-icon-button aria label="Marca como concluido" (click)="markAsDone()">
         <mat-icon>done</mat-icon>
     </button>
-    <button mat-raised-button color="warn">Excluir</button>
+    <button mat-raised-button color="warn" (click)="removeTodo()">Excluir</button>
 </mat-list-item>
