--- a/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
+++ b/workspace/todo-project/src/app/pages/todo/todo-list/todo-list.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
         <mat-list role="list">
             <div *ngFor="let todo of todos;">
-                <app-todo-item [todo]="todo"></app-todo-item>
+                <app-todo-item [todo]="todo" (remove)="removeTodo($event)"></app-todo-item>
             </div>
         </mat-list>
     </mat-card-content>
